--- a/my-project-fetch-api/index.html
+++ b/my-project-fetch-api/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Pokemon Search</title>
 </head>
 <body>
-    
+    <div class="search">
     <input type="text" id="pokemonName" placeholder="Enter name">
     <button onclick="fetchData()" >Cari</button>
 
     <img src="" alt="Pokemon Sprite" id="pokemonSprite" style="display: none;">
-
+</div>
     <script src="index.js"></script>
 </body>
 </html>
