--- a/my-project-fetch-api/index.html
+++ b/my-project-fetch-api/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="search">
+    <h1>POKEMON SEARCH</h1>
     <input type="text" id="pokemonName" placeholder="Enter name">
     <button onclick="fetchData()" >Cari</button>
 
